:art: avoid "loading" overlay scrolling out of view

--- a/assets/tmetric.css
+++ b/assets/tmetric.css
@@ -88,21 +88,18 @@ tr.center td {
 
 #loading {
   display: none;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100vh;
   background: rgba(0, 0, 0, .2);
-  color: #fff;
-  font-size: 40px;
-  text-align: center;
 }
 
 .lds-dual-ring {
   width: 128px;
   height: 128px;
-  margin: calc(25% - 64px) auto 0;
+  margin: calc(50vh - 64px) auto 0;
 }
 
 .lds-dual-ring:after {
